Bug 625357. Take account of tee-surface device offsets when copying subsurfaces pointwise. r=jrmuizel,a=blocking