gfx/thebes/gfxContext.cpp
@@ -757,11 +757,14 @@ GetRoundOutDeviceClipExtents(gfxContext* aCtx)
     return r;
 }
 
+/**
+ * Copy the contents of aSrc to aDest, translated by aTranslation.
+ */
 static void
-CopySurface(gfxASurface* aSrc, gfxASurface* aDest)
+CopySurface(gfxASurface* aSrc, gfxASurface* aDest, const gfxPoint& aTranslation)
 {
   cairo_t *cr = cairo_create(aDest->CairoSurface());
-  cairo_set_source_surface(cr, aSrc->CairoSurface(), 0, 0);
+  cairo_set_source_surface(cr, aSrc->CairoSurface(), aTranslation.x, aTranslation.y);
   cairo_set_operator(cr, CAIRO_OPERATOR_SOURCE);
   cairo_paint(cr);
   cairo_destroy(cr);
@@ -786,11 +789,12 @@ gfxContext::PushGroupAndCopyBackground(gfxASurface::gfxContentType content)
                 static_cast<gfxTeeSurface*>(s.get())->GetSurfaces(&ss);
                 static_cast<gfxTeeSurface*>(d.get())->GetSurfaces(&ds);
                 NS_ASSERTION(ss.Length() == ds.Length(), "Mismatched lengths");
+                gfxPoint translation = d->GetDeviceOffset() - s->GetDeviceOffset();
                 for (PRUint32 i = 0; i < ss.Length(); ++i) {
-                    CopySurface(ss[i], ds[i]);
+                    CopySurface(ss[i], ds[i], translation);
                 }
             } else {
-                CopySurface(s, d);
+                CopySurface(s, d, gfxPoint(0, 0));
             }
             d->SetOpaqueRect(s->GetOpaqueRect());
             return;
